# iptvportal-client

./: .cline-progress  .clinerules  .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_RESTRUCTURING_SUMMARY.md  CLI_STRUCTURE_COMPARISON.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPILOT_SETUP_SUMMARY.md  ENV_VAR_AUTH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY.md  SYNC_INTEGRATION_SUMMARY.md  TEST_LOGGING_FIX.md  VERIFICATION.md  WORKFLOW_DIAGRAM.md  demo_configuration.py  pyproject.toml  quick_test.sh  test_config_env_simple.py  test_field_position_fix.py  test_logging_fix.py  test_sync_basic.py  test_sync_db_only.py
.githooks/: commit-msg  post-commit  pre-commit  pre-push
.github/: CODEOWNERS  CONTRIBUTING.md  COPILOT_VALIDATION.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  TESTING.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml
.github/agents/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md  WORKFLOW_EXAMPLES.md  api-integration.md  cli.md  documentation.md  orchestrator.md  pydantic-agent.md  query-builder.md  resource-manager.md  testing.md
.github/copilot-chat-modes/: deploy.chatmode.m
.github/workflows/: bootstrap-runner-app.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  deploy-runner.yml  docs-validation.yml  security.yml
agents/runnerctl/: LICENSE  README.md  pyproject.toml
agents/runnerctl/contrib/: runnerctl.yaml.example
agents/runnerctl/contrib/systemd/: runnerctl-manager.service  runnerctl.env.example  runnerctl.service
agents/runnerctl/docs/: api-mode.md  github-app-setup.md  installation.md  managed-mode.md  troubleshooting.md
agents/runnerctl/src/runnerctl/: __init__.py  __main__.py  manager.py  server.py
agents/runnerctl/src/runnerctl/shell/: self-runner-ctl.sh
config/: domain-schema.yaml  env.example  example.config.yaml  media-schema.yaml  schemas.yaml  settings.yaml  tv_category-schema.yaml  tv_channel-schema.yaml  tv_program-schema.yaml  tv_program_category-schema.yaml
config/schemas/: logging.settings.yaml  package.settings.yaml  subscriber.settings.yaml  terminal.settings.yaml
contrib/systemd/: runnerctl-manager.service  runnerctl.env.example
docs/: ENV_VAR_AUTH.md  IMPROVEMENTS.md  PROJECT_STRUCTURE.md  architecture.md  authentication.md  cli-architecture.md  cli-config-integration-example.md  cli-config-summary.md  cli-config.md  cli.md  cline-workflow.md  config-inspect.md  configuration.md  documentation-consistency.md  dump_service.md  git-workflow.md  jsonsql.md  logging.md  runnerctl-managed-mode.md  runnerctl-systemd-and-tunnel.md  schema-driven.md  schema.md  sqlite-proxy-architecture.md  sqlmodel_wrappers.md  sync-workflow.md
docs/summaries/: AUTHENTICATION_SUMMARY.md  CLI_REORGANIZATION.md  COPILOT_INSTRUCTIONS_COMPLETE.md  COPILOT_SETUP_VERIFICATION.md
examples/: README.md  auth_with_env_vars.py  authentication_examples.py  demo_configuration.py  dump_service_example.py  full-schema-example.yaml  pydantic_generator_example.py  schema_introspect_sync_example.py  service_layer_example.py  sqlmodel_wrappers_example.py
scripts/: README.md  cline-commit.sh  cline-helpers.sh  cline-init.sh  commit-helper.sh  create-pr.sh  generate_tree_docs.py  git-workflow.sh  issue-branch.sh  runnerctl_manager.py  runnerctl_server.py  self-runner-ctl.sh  setup-hooks.sh  validate-commit.sh  validate_docs.py
src/iptvportal/: __init__.py  async_client.py  auth.py  cache.py  client.py  codegen.py  config.py  exceptions.py  introspector.py  logging_setup.py  project_conf.py  schema.py  validation.py
src/iptvportal/cache/: __cli__.py  __init__.py
src/iptvportal/cli/: __init__.py  __main__.py  debug.py  discovery.py  formatters.py  introspection.py  utils.py
src/iptvportal/cli/commands/: auth.py  cache.py  config.py  jsonsql.py  schema.py  sql.py  sync.py  transpile.py
src/iptvportal/cli/core/: __init__.py  editor.py
src/iptvportal/config/: __cli__.py  __init__.py  logging.py  project.py  settings.py
src/iptvportal/core/: __init__.py  async_client.py  cache.py  client.py
src/iptvportal/dump/: __init__.py  manager.py  models.py  service.py
src/iptvportal/jsonsql/: __cli__.py  __init__.py  __main__.py  builder.py  exceptions.py  transpiler.py
src/iptvportal/models/: __init__.py  requests.py  responses.py  sqlmodel_wrappers.py
src/iptvportal/query/: __init__.py  builder.py
src/iptvportal/schema/: __cli__.py  __init__.py  codegen.py  duckdb_analyzer.py  introspector.py  pydantic_generator.py  table.py
src/iptvportal/service/: __init__.py  query.py
src/iptvportal/sync/: __init__.py  database.py  exceptions.py  manager.py
src/iptvportal/transpiler/: __init__.py  __main__.py  exceptions.py  functions.py  operators.py  transpiler.py
tests/: conftest.py  test_auth.py  test_auth_env_vars.py  test_cli.py  test_codegen.py  test_config_env_simple.py  test_debug_logger.py  test_duckdb_analyzer.py  test_generate_tree_docs.py  test_introspector.py  test_logging_setup.py  test_project_conf.py  test_pydantic_generator.py  test_schema.py  test_schema_dynaconf.py  test_schema_introspect_sync.py  test_service_query.py  test_sqlmodel_wrappers.py  test_sync_config.py  test_sync_database.py  test_sync_integration.py  test_sync_manager.py  test_transpiler.py  test_validation.py
