[project]
name = "iptvportal-client"
version = "0.1.0"
description = "Modern Python client for IPTVPortal JSONSQL API"
authors = [{name = "pv-udpv", email = "pv@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["iptv", "iptvportal", "api", "client", "middleware", "jsonsql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "httpx[http2]>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "orjson>=3.10.0",
    "sqlglot>=27.29.0",
    "typer>=0.20.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]
cli = [
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
iptvportal = "iptvportal.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iptvportal"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "RET", "SIM"]
ignore = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=iptvportal",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
