[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runnerctl"
version = "0.1.0"
description = "GitHub Actions self-hosted runner management and control tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RunnerCTL Contributors"}
]
requires-python = ">=3.9"
keywords = ["github", "actions", "runners", "self-hosted", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]

[project.scripts]
runnerctl = "runnerctl.__main__:main"
runnerctl-manager = "runnerctl.manager:main"
runnerctl-server = "runnerctl.server:main"

[project.urls]
Homepage = "https://github.com/pv-udpv/iptvportal-client/tree/main/agents/runnerctl"
Documentation = "https://github.com/pv-udpv/iptvportal-client/tree/main/agents/runnerctl/docs"
Repository = "https://github.com/pv-udpv/iptvportal-client"
Issues = "https://github.com/pv-udpv/iptvportal-client/issues"

[tool.setuptools]
packages = ["runnerctl"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
runnerctl = ["shell/*.sh"]

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/runnerctl --cov-report=term-missing"
